--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,11 @@
     <title>Beer Tracker</title>
 </head>
 <body>
+
+<a href="/logout">Logout</a>
+
+<br><br>
+
 <a href="/">All</a>
 <a href="/?type=Ale">Ales</a>
 <a href="/?type=Lager">Lagers</a>
@@ -12,7 +17,10 @@
 <a href="/?type=Stout">Strouts</a>
 <a href="/?type=Other">Others</a>
 
+<a href="/?showMine=true">My Beers</a>
 <br><br>
+
+
 
 <form action="/" method="get">
     <input type="text" placeholder="Search" name="search"/>
@@ -36,7 +44,7 @@
 </form>
 
 {{#beers}}
-{{name}} -- {{type}} -- {{calories}}<br>
+{{name}} -- {{type}} -- {{calories}} by {{#user}}{{name}}{{/user}}<br>
 {{/beers}}
 </body>
 </html>
