Add Secure Password System

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <form action="login" method="post">
-    <input type="text" placeholder="Enter your name" name="username"/>
+    <input type="text" placeholder="Enter Your Name" name="username"/>
+    <input type="password" placeholder="Enter Password" name="password"/>
     <button type="submit">Login</button>
 </form>
 
