Create SubPackages for Project

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,7 +17,7 @@
 <a href="/?type=Stout">Strouts</a>
 <a href="/?type=Other">Others</a>
 
-<a href="/?showMine=true">My Beers</a>
+<!--<a href="/?showMine=true">My Beers</a>-->
 <br><br>
 
 
