Make fields non-nullable (nullable = false) be required in HTML

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <form action="login" method="post">
-    <input type="text" placeholder="Enter Your Name" name="username"/>
-    <input type="password" placeholder="Enter Password" name="password"/>
+    <input type="text" placeholder="Enter Your Name" name="username" required/>
+    <input type="password" placeholder="Enter Password" name="password" required/>
     <button type="submit">Login</button>
 </form>
 
